# ziren-wasm-verifier

./: Cargo.toml  README.md
example/binaries/: 23174100_ZKM_167157.txt
example/eth_wasm/: main.js
example/host/: Cargo.toml
example/host/src/: main.rs
example/json/: fibonacci_groth16_proof.json  fibonacci_plonk_proof.json  fibonacci_stark_proof.json
example/wasm_example/: main.js
verifier/src/: lib.rs
