[workspace]
members = [
    "verifier",
    "example/guest",
    "example/host",
]
resolver = "2"

[workspace.dependencies]
zkm-build = { git = "https://github.com/ProjectZKM/Ziren" }
zkm-verifier = { git = "https://github.com/ProjectZKM/Ziren", features = ["dummy-vk-map"] }
zkm-zkvm = { git = "https://github.com/ProjectZKM/Ziren" }
zkm-sdk = { git = "https://github.com/ProjectZKM/Ziren" }
